--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 <body>
   <p>If you are not redirected automatically, please visit "https://www.meetup.com/miitti1/events/304704409" </p>
 </body>
-  
+</html>
