--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; URL=https://www.meetup.com/miitti1/events/304704409">
-  <title>Guided Meditations</title>
+    <meta http-equiv="refresh" content="0; url=https://www.meetup.com/miitti1/events/304704409">
+    <title>Redirecting...</title>
 </head>
 <body>
-  <p>If you are not redirected automatically, please visit "https://www.meetup.com/miitti1/events/304704409" </p>
+    <p>If you are not redirected automatically, <a href="https://www.meetup.com/miitti1/events/304704409">click here</a>.</p>
 </body>
 </html>
+
