--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0; url=https://www.meetup.com/miitti1/events/305522631">
-    <title>Redirecting...</title>
+    <title>Guided Meditations!</title>
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="https://www.meetup.com/miitti1/events/305522631">click here</a>.</p>
